fixed RTL menu and navbar and navigation

--- a/apps/templates/home/profile.html
+++ b/apps/templates/home/profile.html
@@ -12,11 +12,15 @@
     <span class="mask bg-primary opacity-6"></span>
   </div>
       
-  {% include "includes/sidenav.html" %}
+  {% include "includes/sidenav-rtl" %}
 
-  <main class="main-content position-relative border-radius-lg ">
+<!--  <main class="main-content position-relative border-radius-lg ">-->
 
-    {% include "includes/navigation.html" %}
+  <main class="main-content position-relative border-radius-lg overflow-hidden">
+
+
+
+    {% include "includes/navigation-rtl.html" %}
 
     <div class="card shadow-lg mx-4 card-profile-bottom">
       <div class="card-body p-3">
