--- a/apps/templates/home/tables.html
+++ b/apps/templates/home/tables.html
@@ -9,11 +9,12 @@
 
   <div class="min-height-300 bg-primary position-absolute w-100"></div>
       
-  {% include "includes/sidenav.html" %}
+  {% include "includes/sidenav-rtl.html" %}
 
-  <main class="main-content position-relative border-radius-lg ">
+<!--  <main class="main-content position-relative border-radius-lg ">-->
+  <main class="main-content position-relative border-radius-lg overflow-hidden">
 
-    % include "includes/navigation.html" %}
+    % include "includes/navigation-rtl.html" %}
 
     <div class="container-fluid py-4">
 
