--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -14,7 +14,7 @@
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-tv-2 text-primary text-sm opacity-10"></i>
             </div>
-            <span class="nav-link-text me-1">لوحة القيادة</span>
+            <span class="nav-link-text me-1">מטופלים</span>
           </a>
         </li>
         <li class="nav-item">
@@ -22,7 +22,7 @@
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
             </div>
-            <span class="nav-link-text me-1">الجداول</span>
+            <span class="nav-link-text me-1">אירועים</span>
           </a>
         </li>
         <li class="nav-item">
@@ -30,7 +30,7 @@
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-credit-card text-success text-sm opacity-10"></i>
             </div>
-            <span class="nav-link-text me-1">الفواتير</span>
+            <span class="nav-link-text me-1">הגדרות</span>
           </a>
         </li>
         <li class="nav-item">
