--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -16,7 +16,7 @@
             <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column mx-lg-0 mx-auto">
               <div class="card card-plain">
                 <div class="card-header pb-0 text-start">
-                  <h4 class="font-weight-bolder">Sign In</h4>
+                  <h4 class="font-weight-bolder">התחברות</h4>
                   <p class="mb-0">
                     {% if msg %}
                       <span class="text-danger">{{ msg | safe }}</span>
@@ -49,8 +49,9 @@
                 </div>
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                   <p class="mb-4 text-sm mx-auto">
-                    Don't have an account?
-                    <a href="{{ url_for('authentication_blueprint.register') }}" class="text-primary text-gradient font-weight-bold">Sign UP</a>
+                    עדיין לא נפתחה מחלקה ?
+                    <br>
+                      <a href="{{ url_for('authentication_blueprint.register') }}" class="text-primary text-gradient font-weight-bold">ליצירת מחלקה</a>
                   </p>
                 </div>
               </div>
