--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -18,14 +18,14 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/tables.html">
+          <a class="nav-link " href="{{ url_for('patients.list') }}">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
             </div>
             <span class="nav-link-text me-1">אירועים</span>
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-itfem">
           <a class="nav-link " href="/billing.html">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-credit-card text-success text-sm opacity-10"></i>
