--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -34,11 +34,11 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/virtual-reality.html">
+          <a class="nav-link " href="/calendar.html">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-app text-info text-sm opacity-10"></i>
             </div>
-            <span class="nav-link-text me-1">الواقع الافتراضي</span>
+            <span class="nav-link-text me-1">לוח שנה</span>
           </a>
         </li>
         <li class="nav-item">
