removed some arabic, fixed known bugs

--- a/apps/templates/home/calendar.html
+++ b/apps/templates/home/calendar.html
@@ -28,7 +28,7 @@
   {% include "includes/sidenav-rtl.html" %}
     <main class="main-content position-relative border-radius-lg overflow-hidden">
 
-    % include "includes/navigation-rtl.html" %}
+    {% include "includes/navigation-rtl.html" %}
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
