fixed navbar right

--- a/apps/templates/includes/navigation-rtl.html
+++ b/apps/templates/includes/navigation-rtl.html
@@ -15,7 +15,7 @@
             <input type="text" class="form-control" placeholder="أكتب هنا...">
           </div>
         </div>
-        <ul class="navbar-nav me-auto ms-0 justify-content-end">
+        <ul class="navbar-nav ms-0 justify-content-end">
           <li class="nav-item d-flex align-items-center">
             <a href="{{ url_for('authentication_blueprint.logout') }}" class="nav-link text-white font-weight-bold px-0">
               <i class="fa fa-sign-out me-sm-1"></i>
