--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -26,19 +26,19 @@
         <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
           <div class="card z-index-0">
             <div class="card-header text-center pt-4">
-              <h5>Register</h5>
-            </div>
-            <div class="row px-xl-5 px-sm-4 px-3">
-              <div class="mt-2 position-relative text-center">
-                <p class="text-sm font-weight-bold mb-2 text-secondary text-border d-inline z-index-2 bg-white px-3">
-                  {% if msg %}
-                    <span class="text-info">{{ msg | safe }}</span>
-                  {% else %}
-                    Add your credentials
-                  {% endif %}                  
-                </p>
-              </div>
-            </div>
+              <h5>הרשמה</h5>
+{#            </div>#}
+{#            <div class="row px-xl-5 px-sm-4 px-3">#}
+{#              <div class="mt-2 position-relative text-center">#}
+{#                <p class="text-sm font-weight-bold mb-2 text-secondary text-border d-inline z-index-2 bg-white px-3">#}
+{#                  {% if msg %}#}
+{#                    <span class="text-info">{{ msg | safe }}</span>#}
+{#                  {% else %}#}
+{#                    Add your credentials#}
+{#                  {% endif %}#}
+{#                </p>#}
+{#              </div>#}
+{#            </div>#}
             <div class="card-body">
               
               {% if success %}
@@ -53,14 +53,14 @@
 
                   {{ form.hidden_tag() }}
 
-                  <div class="mb-3">
-                    {{ form.username(placeholder="Username",class="form-control") }}
+                  <div class="mb-3" dir="rtl">
+                    {{ form.username(placeholder="מספר מחלקה",class="form-control") }}
                   </div>
-                  <div class="mb-3">
-                    {{ form.email(placeholder="Email",class="form-control") }}
+                  <div class="mb-3" dir="rtl">
+                    {{ form.email(placeholder="כתובת מייל",class="form-control") }}
                   </div>
-                  <div class="mb-3">
-                    {{ form.password(placeholder="Password",class="form-control",type="password") }}
+                  <div class="mb-3" dir="rtl">
+                    {{ form.password(placeholder="סיסמה",class="form-control",type="password") }}
                   </div>
                   <div class="form-check form-check-info text-start">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
@@ -69,10 +69,10 @@
                     </label>
                   </div>
                   <div class="text-center">
-                    <button type="submit" name="register" class="btn bg-gradient-dark w-100 my-4 mb-2">Sign UP</button>
+                    <button type="submit" name="register" class="btn bg-gradient-dark w-100 my-4 mb-2">הרשמה</button>
                   </div>
                   <p class="text-sm mt-3 mb-0 text-center">
-                    Already have an account? <a href="{{ url_for('authentication_blueprint.login') }}" class="text-dark font-weight-bolder">Sign IN</a>
+                    המחלקה כבר רשומה? <a href="{{ url_for('authentication_blueprint.login') }}" class="text-dark font-weight-bolder">התחברות</a>
                   </p>
                 </form>
 
@@ -86,58 +86,58 @@
     </div>
   </main>
 
-  <footer class="footer py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mb-4 mx-auto text-center">
-          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-            Company
-          </a>
-          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-            About Us
-          </a>
-          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-            Team
-          </a>
-          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-            Products
-          </a>
-          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-            Blog
-          </a>
-          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-            Pricing
-          </a>
-        </div>
-        <div class="col-lg-8 mx-auto text-center mb-4 mt-2">
-          <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
-            <span class="text-lg fab fa-dribbble"></span>
-          </a>
-          <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
-            <span class="text-lg fab fa-twitter"></span>
-          </a>
-          <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
-            <span class="text-lg fab fa-instagram"></span>
-          </a>
-          <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
-            <span class="text-lg fab fa-pinterest"></span>
-          </a>
-          <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
-            <span class="text-lg fab fa-github"></span>
-          </a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-8 mx-auto text-center mt-1">
-          <p class="mb-0 text-secondary">
-            &copy; <a href="https://www.creative-tim.com?AFFILIATE=128200" class="font-weight-bold" target="_blank">Creative Tim</a>
-            - Coded by AppSeed.
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
-    
+{#  <footer class="footer py-5">#}
+{#    <div class="container">#}
+{#      <div class="row">#}
+{#        <div class="col-lg-8 mb-4 mx-auto text-center">#}
+{#          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">#}
+{#            Company#}
+{#          </a>#}
+{#          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">#}
+{#            About Us#}
+{#          </a>#}
+{#          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">#}
+{#            Team#}
+{#          </a>#}
+{#          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">#}
+{#            Products#}
+{#          </a>#}
+{#          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">#}
+{#            Blog#}
+{#          </a>#}
+{#          <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">#}
+{#            Pricing#}
+{#          </a>#}
+{#        </div>#}
+{#        <div class="col-lg-8 mx-auto text-center mb-4 mt-2">#}
+{#          <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">#}
+{#            <span class="text-lg fab fa-dribbble"></span>#}
+{#          </a>#}
+{#          <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">#}
+{#            <span class="text-lg fab fa-twitter"></span>#}
+{#          </a>#}
+{#          <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">#}
+{#            <span class="text-lg fab fa-instagram"></span>#}
+{#          </a>#}
+{#          <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">#}
+{#            <span class="text-lg fab fa-pinterest"></span>#}
+{#          </a>#}
+{#          <a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">#}
+{#            <span class="text-lg fab fa-github"></span>#}
+{#          </a>#}
+{#        </div>#}
+{#      </div>#}
+{#      <div class="row">#}
+{#        <div class="col-8 mx-auto text-center mt-1">#}
+{#          <p class="mb-0 text-secondary">#}
+{#            &copy; <a href="https://www.creative-tim.com?AFFILIATE=128200" class="font-weight-bold" target="_blank">Creative Tim</a>#}
+{#            - Coded by AppSeed.#}
+{#          </p>#}
+{#        </div>#}
+{#      </div>#}
+{#    </div>#}
+{#  </footer>#}
+{#    #}
 {% endblock content %}
 
 <!-- Specific JS goes HERE --> 
