--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -18,15 +18,15 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="{{ url_for('patients.list') }}">
+          <a class="nav-link "href="{{ url_for('patients_blueprint.tables') }}">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
             </div>
-            <span class="nav-link-text me-1">אירועים</span>
+            <span class="nav-link-text me-1">מטופלים</span>
           </a>
         </li>
         <li class="nav-itfem">
-          <a class="nav-link " href="/billing.html">
+          <a class="nav-link " href="/profile.html">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-credit-card text-success text-sm opacity-10"></i>
             </div>
@@ -53,11 +53,11 @@
           <h6 class="ps-4 me-4 pe-2 text-uppercase text-xs font-weight-bolder opacity-6">صفحات المرافق</h6>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/profile.html">
+          <a class="nav-link "  href="{{ url_for('patients_blueprint.tables') }}">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
             </div>
-            <span class="nav-link-text me-1">حساب تعريفي</span>
+            <span class="nav-link-text me-1">פרופיל</span>
           </a>
         </li>
         <li class="nav-item">
