--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -27,7 +27,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {% if 'billing' in segment %} active {% endif %}" href="/billing.html">
+          <a class="nav-link " href="/profile.html">
+{#              {% if 'billing' in segment %} active {% endif %}#}
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-credit-card text-success text-sm opacity-10"></i>
             </div>
@@ -54,7 +55,8 @@
           <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Account pages</h6>
         </li>
         <li class="nav-item">
-          <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="/profile.html">
+          <a class="nav-link " href="/profile.html">
+{#              {% if 'profile' in segment %} active {% endif %}#}
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
             </div>
