Exported Events to a unique blueprint

--- a/apps/templates/events/calendar.html
+++ b/apps/templates/events/calendar.html
@@ -225,6 +225,7 @@
                     title: '{{event.title}}',
                     start: '{{event.start}}',
                     end: '{{event.end}}',
+                    editable: '{{event.resourceEditable}}',
                 },
             {% endfor %}
         ],
