add list to patients info and delete contact modal

--- a/apps/templates/patients/tables.html
+++ b/apps/templates/patients/tables.html
@@ -69,7 +69,7 @@
             <a class="btn btn-indigo btn-sm m-0" href="{{url_for('patients_blueprint.update',patient_id=patient.patient_id)}}" role="button">בחירה</a>
           </td>
           <td>
-            <a class="btn btn-indigo btn-sm m-0" href="{{url_for('patients_blueprint.update',patient_id=patient.patient_id)}}" role="button">עריכה</a>
+            <a class="btn btn-indigo btn-sm m-0" href="{{url_for('patients_blueprint.update',patient_id=patient.patient_id)}}" role="button">בחירה</a>
           </td>
 
                 <td class="align-middle text-center text-m">
