--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -7,11 +7,11 @@
 
 {% block content %}
 
-  <main class="main-content  mt-0">
+  <main class="main-content  mt-0" >
 
     <section>
       <div class="page-header min-vh-100">
-        <div class="container">
+        <div class="container" >
           <div class="row">
             <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column mx-lg-0 mx-auto">
               <div class="card card-plain">
@@ -20,10 +20,7 @@
                   <p class="mb-0">
                     {% if msg %}
                       <span class="text-danger">{{ msg | safe }}</span>
-                    {% else %}
-                    <span>
-                      Add your credentials
-                    </span>
+
                     {% endif %}                    
                   </p>
                 </div>
@@ -40,10 +37,10 @@
                     </div>
                     <div class="form-check form-switch">
                       <input class="form-check-input" type="checkbox" id="rememberMe">
-                      <label class="form-check-label" for="rememberMe">Remember me</label>
+                      <label class="form-check-label" for="rememberMe">שמירת מחלקה וסיסמא</label>
                     </div>
                     <div class="text-center">
-                      <button type="submit" name="login" class="btn btn-lg btn-primary btn-lg w-100 mt-4 mb-0">Sign IN</button>
+                      <button type="submit" name="login" class="btn btn-lg btn-primary btn-lg w-100 mt-4 mb-0">התחברות</button>
                     </div>
                   </form>
                 </div>
