--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container" dir="rtl">
       <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
         <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
           <div class="card z-index-0">
