--- a/apps/templates/home/sign-in.html
+++ b/apps/templates/home/sign-in.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                   <p class="mb-4 text-sm mx-auto">
-                    Don't have an account?
+                    עדיין לא יצרת מחלקה ?
                     <a href="javascript:;" class="text-primary text-gradient font-weight-bold">Sign up</a>
                   </p>
                 </div>
