--- a/apps/templates/patients/patient_info.html
+++ b/apps/templates/patients/patient_info.html
@@ -15,8 +15,11 @@
         <div class="row">
             <div class="col-md-7 mt-4">
                 <div class="card">
-                    <div class="card-header pb-0 px-3">
+                    <div class="card-header pb-0 px-3" dir="rtl">
                         <h6 class="mb-0">פרטי אנשי קשר</h6>
+                        <button type="button" class="btn btn-success float-right"
+                                data-toggle="modal" data-target="#add_new_contact_modal">הוספת איש קשר חדש
+                        </button>
                     </div>
                     <div class="card-body pt-4 p-3">
                         {% for contact in contacts %}
@@ -34,50 +37,147 @@
                                     <div class="ms-auto text-end">
                                         <a data-target="#del_contact_modal" data-toggle="modal"
                                            class="btn btn-link text-danger text-gradient px-3 mb-0"><i
-                                                class="far fa-trash-alt me-2"></i>Delete</a>
-                                        <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i
-                                                class="fas fa-pencil-alt text-dark me-2" aria-hidden="true"></i>Edit</a>
+                                                class="far fa-trash-alt me-2"></i>מחיקה</a>
+                                        <a class="btn btn-link text-dark px-3 mb-0" data-target="#edit_contact_modal" data-toggle="modal"><i
+                                                class="fas fa-pencil-alt text-dark me-2" aria-hidden="true"></i>עריכה</a>
                                     </div>
                                 </li>
                             </ul>
 
                             <!-- delete contact modal -->
                             <div class="modal" tabindex="-1" role="dialog" id="del_contact_modal">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title">מחיקת מטופל</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <p>האם את\ה בטוח\ה שברצונך למחוק את
-                                            {{ contact.f_name }} {{ contact.l_name }}
-                                            מרשימת אנשי הקשר של
-                                            {{ patient_id }}
-                                        </p>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">ביטול
-                                        </button>
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">מחיקת מטופל</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p>האם את\ה בטוח\ה שברצונך למחוק את
+                                                {{ contact.f_name }} {{ contact.l_name }}
+                                                מרשימת אנשי הקשר של
+                                                {{ patient_id }}
+                                            </p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">ביטול
+                                            </button>
 
-                                        <form method="POST"
-                                              action="{{ url_for('patients_blueprint.delete_contact',contact_id=contact.contact_id) }}">
-                                            <input class="btn btn-danger" type="submit" value="מחיקה">
-                                        </form>
+                                            <form method="POST"
+                                                  action="{{ url_for('patients_blueprint.delete_contact',contact_id=contact.contact_id) }}">
+                                                <input class="btn btn-danger" type="submit" value="מחיקה">
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <!-- add contact modal -->
+                            <div id="add_new_contact_modal" class="modal fade" role="dialog" dir="rtl">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+
+                                            <h4 class="modal-title">הוספת מטופל חדש</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            <form method="POST"
+                                                  action="{{ url_for('patients_blueprint.add_contact',patient_id=patient_id) }}">
+                                                <div class="form-group">
+                                                    {{ contact_form.f_name.label(class="form-control-label") }}
+                                                    {{ contact_form.f_name(class="form-control" ) }}
+                                                </div>
+
+                                                <div class="form-group">
+                                                    {{ contact_form.l_name.label(class="form-control-label") }}
+                                                    {{ contact_form.l_name(class="form-control" ) }}
+                                                </div>
+                                                <div class="form-group">
+                                                    {{ contact_form.phone.label(class="form-control-label") }}
+                                                    {{ contact_form.phone(class="form-control" ) }}
+                                                </div>
+                                                <div class="form-group">
+                                                    {{ contact_form.mail.label(class="form-control-label") }}
+                                                    {{ contact_form.mail(class="form-control" ) }}
+                                                </div>
+                                                <div class="form-group">
+                                                    {{ contact_form.priority.label(class="form-control-label") }}
+                                                    {{ contact_form.priority(class="form-control" ) }}
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <button class="btn btn-primary" type="submit">הוספת איש קשר חדש
+                                                    </button>
+                                                </div>
+
+                                            </form>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
 
-                        </div>
+                            <!-- edit contact modal -->
+                            <div id="edit_contact_modal" class="modal fade" role="dialog" dir="rtl">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h4 class="modal-title">עריכת איש קשר</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            <form method="POST"
+                                                  action="{{ url_for('patients_blueprint.edit_contact',contact_id=contact.contact_id) }}">
+                                                <div class="form-group">
+                                                    {{ contact_form.f_name.label(class="form-control-label") }}
+                                                    {{ contact_form.f_name(class="form-control",value=contact.f_name) }}
+
+                                                </div>
+
+                                                <div class="form-group">
+                                                    {{ contact_form.l_name.label(class="form-control-label") }}
+                                                    {{ contact_form.l_name(class="form-control",value=contact.l_name ) }}
+                                                </div>
+                                                <div class="form-group">
+                                                    {{ contact_form.phone.label(class="form-control-label") }}
+                                                    {{ contact_form.phone(class="form-control" ,value=contact.phone) }}
+                                                </div>
+                                                <div class="form-group">
+                                                    {{ contact_form.mail.label(class="form-control-label") }}
+                                                    {{ contact_form.mail(class="form-control" ,value=contact.mail) }}
+                                                </div>
+                                                <div class="form-group">
+                                                    {{ contact_form.priority.label(class="form-control-label") }}
+                                                    {{ contact_form.priority(class="form-control",value=contact.priority ) }}
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <button class="btn btn-primary" type="submit">שמירת שינויים
+                                                    </button>
+                                                </div>
+
+                                            </form>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                         {% endfor %}
                     </div>
                 </div>
-
             </div>
-
         </div>
+
+        <div class="row"></div>
     </main>
 {% endblock content %}
 
