--- a/apps/templates/patients/tables.html
+++ b/apps/templates/patients/tables.html
@@ -73,9 +73,39 @@
           </td>
 
                 <td class="align-middle text-center text-m">
-          <form action="{{ url_for('patients_blueprint.delete',patient_id = patient.patient_id) }}" method="POST">
-            <input class="btn btn-danger" type="submit" value="מחיקה">
-          </form>
+
+            <input class="btn btn-danger" type="submit" value="מחיקה" data-toggle="modal" data-target="#del_patient_modal">
+
+                            <!-- delete contact modal -->
+                            <div class="modal" tabindex="-1" role="dialog" id="del_patient_modal">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title">מחיקת מטופל</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>האם את\ה בטוח\ה שברצונך למחוק את
+                                            {{ patient.f_name }} {{ patient.l_name }}
+                                            מרשימת המטופלים?
+                                        </p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">ביטול
+                                        </button>
+
+                                        <form method="POST"
+                                              action="{{ url_for('patients_blueprint.delete',patient_id = patient.patient_id) }}">
+                                            <input class="btn btn-danger" type="submit" value="מחיקה">
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
                     </tr>
                       </td>
                     {% endfor %}
