--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -83,8 +83,8 @@
         <img class="w-50 mx-auto" src="{{ config.ASSETS_ROOT }}/img/illustrations/icon-documentation.svg" alt="sidebar_illustration">
         <div class="card-body text-center p-3 w-100 pt-0">
           <div class="docs-info">
-            <h6 class="mb-0 text-center">تحتاج مساعدة?</h6>
-            <p class="text-xs font-weight-bold text-center mb-0">يرجى التحقق من مستنداتنا</p>
+<!--            <h6 class="mb-0 text-center">تحتاج مساعدة?</h6>-->
+<!--            <p class="text-xs font-weight-bold text-center mb-0">يرجى التحقق من مستنداتنا</p>-->
           </div>
         </div>
       </div>
