--- a/apps/templates/includes/navigation-rtl.html
+++ b/apps/templates/includes/navigation-rtl.html
@@ -12,7 +12,7 @@
         <div class="ms-md-auto pe-md-3 d-flex align-items-center">
           <div class="input-group">
             <span class="input-group-text text-body"><i class="fas fa-search" aria-hidden="true"></i></span>
-            <input type="text" class="form-control" placeholder="أكتب هنا...">
+            <input type="text" class="form-control" placeholder="חפש/י...">
           </div>
         </div>
         <ul class="navbar-nav ms-0 justify-content-end">
