add contacts times from

--- a/apps/templates/patients/tables.html
+++ b/apps/templates/patients/tables.html
@@ -66,10 +66,10 @@
                         <span class="text-secondary text-m font-weight-bold">{{ patient.max_calls }}</span>
                       </td>
           <td>
-            <a class="btn btn-indigo btn-sm m-0" href="{{url_for('patients_blueprint.update',patient_id=patient.patient_id)}}" role="button">בחירה</a>
+            <a class="btn btn-indigo btn-sm m-0" href="{{url_for('patients_blueprint.patient_info',patient_id=patient.patient_id)}}" role="button">בחירה</a>
           </td>
           <td>
-            <a class="btn btn-indigo btn-sm m-0" href="{{url_for('patients_blueprint.update',patient_id=patient.patient_id)}}" role="button">בחירה</a>
+            <a class="btn btn-indigo btn-sm m-0" href="{{url_for('patients_blueprint.patient_info',patient_id=patient.patient_id)}}" role="button">בחירה</a>
           </td>
 
                 <td class="align-middle text-center text-m">
