change names show lipaz

--- a/apps/templates/patients/add_patient.html
+++ b/apps/templates/patients/add_patient.html
@@ -26,7 +26,7 @@
             <div class="card-header pb-0">
               <div class="d-flex align-items-left">
 
-                <button type="submit" href="{{ url_for('patients_blueprint.add',form=form) }}" class="btn btn-outline-success">שמירה</button>
+                <button type="submit" href="{{ url_for('patients_blueprint.add_patient',form=form) }}" class="btn btn-outline-success">שמירה</button>
               </div>
             </div>
             <div class="card-body">
