--- a/apps/templates/patients/patient_info.html
+++ b/apps/templates/patients/patient_info.html
@@ -82,7 +82,7 @@
                             </div>
                             <div class="d-flex align-items-left">
 
-                                <button href="{{ url_for('patients_blueprint.update' ,patient_id=patient_form.patient_id.data) }}"
+                                <button href="{{ url_for('patients_blueprint.update_patient' ,patient_id=patient_id) }}"
                                         class="btn btn-primary btn-sm ">ערוך פרטי מטופל
                                 </button>
                             </div>
