patines and contact list are available at the create new event

--- a/apps/static/assets/css/events.css
+++ b/apps/static/assets/css/events.css
@@ -16,3 +16,13 @@
     text-align: right;
  }
 
+.add-event{
+    display: block;
+    width: 10%;
+    float:right;
+}
+
+.righte{
+    display: block;
+    float:right;
+}
