--- a/apps/templates/events/calendar.html
+++ b/apps/templates/events/calendar.html
@@ -1,173 +1,219 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Blank Page {% endblock %} 
+{% block title %} Blank Page {% endblock %}
 
 <!-- Element injected in the BODY element -->
-{% block body_class %} {% endblock body_class %} 
+{% block body_class %} {% endblock body_class %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 
-  <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="/static/assets/plugins/fontawesome-free/css/all.min.css">
-  <!-- fullCalendar -->
-  <link rel="stylesheet" href="/static/assets/plugins/fullcalendar/main.min.css">
-  <link rel="stylesheet" href="/static/assets/plugins/fullcalendar-daygrid/main.min.css">
-  <link rel="stylesheet" href="/static/assets/plugins/fullcalendar-timegrid/main.min.css">
-  <link rel="stylesheet" href="/static/assets/plugins/fullcalendar-bootstrap/main.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="/static/assets/css/adminlte.min.css">
-  <link rel="stylesheet" href="/static/assets/css/events.css"
+<!-- Google Font: Source Sans Pro -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+<!-- Font Awesome -->
+<link rel="stylesheet" href="/static/assets/plugins/fontawesome-free/css/all.min.css">
+<!-- fullCalendar -->
+<link rel="stylesheet" href="/static/assets/plugins/fullcalendar/main.min.css">
+<link rel="stylesheet" href="/static/assets/plugins/fullcalendar-daygrid/main.min.css">
+<link rel="stylesheet" href="/static/assets/plugins/fullcalendar-timegrid/main.min.css">
+<link rel="stylesheet" href="/static/assets/plugins/fullcalendar-bootstrap/main.min.css">
+<!-- Theme style -->
+<link rel="stylesheet" href="/static/assets/css/adminlte.min.css">
+<link rel="stylesheet" href="/static/assets/css/events.css"
 
-{% endblock stylesheets %}
+      {% endblock stylesheets %}
 
-{% block content %}
+      {% block content %}
 <!-- For our site template-->
-  <div class="min-height-300 bg-primary position-absolute w-100"></div>
-  {% include "includes/sidenav-rtl.html" %}
-    <main class="main-content position-relative border-radius-lg overflow-hidden">
+<div class="min-height-300 bg-primary position-absolute w-100"></div>
+{% include "includes/sidenav-rtl.html" %}
+<main class="main-content position-relative border-radius-lg overflow-hidden">
 
     {% include "includes/navigation-rtl.html" %}
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1>Calendar</h1>
-          </div>
-          <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Calendar</li>
-            </ol>
-          </div>
-        </div>
-      </div><!-- /.container-fluid -->
-    </section>
-
-    <!-- Main content -->
-    <section class="content">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-3">
-            <div class="sticky-top mb-3">
-              <div class="card">
-                <div class="card-header">
-                  <h4 class="card-title">Draggable Events</h4>
-                </div>
-                <div class="card-body">
-                  <!-- the events -->
-                  <div id="external-events">
-                    <div class="external-event bg-success">Lunch</div>
-                    <div class="external-event bg-warning">Go home</div>
-                    <div class="external-event bg-info">Do homework</div>
-                    <div class="external-event bg-primary">Work on UI design</div>
-                    <div class="external-event bg-danger">Sleep tight</div>
-                    <div class="checkbox">
-                      <label for="drop-remove">
-                        <input type="checkbox" id="drop-remove">
-                        remove after drop
-                      </label>
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1 class="righte">Calendar</h1>
                     </div>
-                  </div>
-                </div>
-                <!-- /.card-body -->
-              </div>
-              <!-- /.card -->
-              <div class="card">
-                <div class="card-header">
-                  <h3 class="card-title">Create Event</h3>
-                </div>
-                <div class="card-body">
-                  <div class="btn-group" style="width: 100%; margin-bottom: 10px;">
-                    <ul class="fc-color-picker" id="color-chooser">
-                      <li><a class="text-primary" href="#"><i class="fas fa-square"></i></a></li>
-                      <li><a class="text-warning" href="#"><i class="fas fa-square"></i></a></li>
-                      <li><a class="text-success" href="#"><i class="fas fa-square"></i></a></li>
-                      <li><a class="text-danger" href="#"><i class="fas fa-square"></i></a></li>
-                      <li><a class="text-muted" href="#"><i class="fas fa-square"></i></a></li>
-                    </ul>
-                  </div>
-                  <!-- /btn-group -->
-                  <div class="input-group">
-                    <input id="new-event" type="text" class="form-control" placeholder="Event Title">
 
-                    <div class="input-group-append">
-                      <button id="add-new-event" type="button" class="btn btn-primary">Add</button>
+                    <div>
+                        <button type="button" class="btn btn-success float-right"
+                                data-toggle="modal" data-target="#add_new_event_modal">אירוע חדש דנדש
+                        </button>
                     </div>
-                    <!-- /btn-group -->
-                  </div>
-                  <!-- /input-group -->
+
+                    <div class="col-sm-6">
+                        <ol class="breadcrumb float-sm-right">
+                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item active">Calendar</li>
+                        </ol>
+                    </div>
                 </div>
-              </div>
+            </div><!-- /.container-fluid -->
+        </section>
+
+        <!-- Main content -->
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="sticky-top mb-3">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 class="card-title">Draggable Events</h4>
+                                </div>
+                                <div class="card-body">
+                                    <!-- the events -->
+                                    <div id="external-events">
+                                        <div class="external-event bg-success">Lunch</div>
+                                        <div class="external-event bg-warning">Go home</div>
+                                        <div class="external-event bg-info">Do homework</div>
+                                        <div class="external-event bg-primary">Work on UI design</div>
+                                        <div class="external-event bg-danger">Sleep tight</div>
+                                        <div class="checkbox">
+                                            <label for="drop-remove">
+                                                <input type="checkbox" id="drop-remove">
+                                                remove after drop
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- /.card-body -->
+                            </div>
+                            <!-- /.card -->
+                            <div class="card">
+                                <div class="card-header">
+                                    <h3 class="card-title">Create Event</h3>
+                                </div>
+                                <div class="card-body">
+                                    <div class="btn-group" style="width: 100%; margin-bottom: 10px;">
+                                        <ul class="fc-color-picker" id="color-chooser">
+                                            <li><a class="text-primary" href="#"><i class="fas fa-square"></i></a></li>
+                                            <li><a class="text-warning" href="#"><i class="fas fa-square"></i></a></li>
+                                            <li><a class="text-success" href="#"><i class="fas fa-square"></i></a></li>
+                                            <li><a class="text-danger" href="#"><i class="fas fa-square"></i></a></li>
+                                            <li><a class="text-muted" href="#"><i class="fas fa-square"></i></a></li>
+                                        </ul>
+                                    </div>
+                                    <!-- /btn-group -->
+                                    <div class="input-group">
+                                        <input id="new-event" type="text" class="form-control"
+                                               placeholder="Event Title">
+
+                                        <div class="input-group-append">
+                                            <button id="add-new-event" type="button" class="btn btn-primary">Add
+                                            </button>
+                                        </div>
+                                        <!-- /btn-group -->
+                                    </div>
+                                    <!-- /input-group -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-md-9">
+                        <div class="card card-primary">
+                            <div class="card-body p-0">
+                                <!-- THE CALENDAR -->
+                                <div id="calendar"></div>
+                            </div>
+                            <!-- /.card-body -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+            </div><!-- /.container-fluid -->
+
+        </section>
+        <!-- /.content -->
+
+
+    </div><!--   /.content-wrapper -->
+
+    Add New Event Modal:
+    <div id="add_new_event_modal" class="modal fade" role="dialog" dir="rtl">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h4 class="modal-title">הוספת שיחה חדשה</h4>
+                </div>
+
+                <div class="modal-body">
+                    <form method="POST"
+                          action="{{ url_for('events_blueprint.add_new_event_popup') }}">
+                        <div class="form-group">
+                            {{ add_new_event_form.patient_list.label(class="form-control-label") }}
+                            {{ add_new_event_form.patient_list(class="form-control") }}
+                        </div>
+
+                        <div class="form-group">
+                            {{ add_new_event_form.contact_list.label(class="form-control-label") }}
+                            {{ add_new_event_form.contact_list(class="form-control") }}
+                        </div>
+
+
+                        <div class="form-group">
+                            {{ add_new_event_form.day.label(class="form-control-label") }}
+                            {{ add_new_event_form.day(class="form-control") }}
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-primary" type="submit">הוספת שיחת וידאו חדשה</button>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
             </div>
-          </div>
-          <!-- /.col -->
-          <div class="col-md-9">
-            <div class="card card-primary">
-              <div class="card-body p-0">
-                <!-- THE CALENDAR -->
-                <div id="calendar"></div>
-              </div>
-              <!-- /.card-body -->
-            </div>
-            <!-- /.card -->
-          </div>
-          <!-- /.col -->
         </div>
-        <!-- /.row -->
-      </div><!-- /.container-fluid -->
-        <div class="card-header pb-0 px-3" dir="rtl">
-           <button type="button" class="btn btn-success float-right" id="editEventButton"
-                   data-toggle="modal" data-target="#add_new_contact_modal" style="display:none">הוספת איש קשר חדש
-           </button>
-       </div>
-
-    </section>
-    <!-- /.content -->
+    </div>
 
 
+    <!--Edit Event Modal-->
+    <div id="add_new_contact_modal" class="modal" role="dialog" dir="rtl">
+        <div class="modal-dialog">
+            <div class="modal-content">
 
-
-  </div><!--   /.content-wrapper -->
-
-
-                <div id="add_new_contact_modal" class="modal" role="dialog" dir="rtl">
-                   <div class="modal-dialog">
-                      <div class="modal-content">
-
-                                      <div class="modal-header">
-                                            <h4 class="modal-title">צפייה באירוע</h4>
-                                      </div>
-
-                                      <div class="modal-body">
-                                        <form id="delete_this_event" method="POST" action="{{ url_for('events_blueprint.delete_event', eventForm=eventForm)}}">
-
-                                          <label class="prettyLabel" for="eventID">האירוע מתחיל בשעה:</label>
-                                          <input class="eventTimes" type="text" name="" style="width:100%" id="eventStartTime" value="" readonly />
-
-                                          <label class="prettyLabel" for="eventID">האירוע נגמר בשעה:</label>
-                                          <input class="eventTimes" type="text" name="" style="width:100%" id="eventEndTime" value="" readonly />
-
-                                          <input type="hidden" name="eventID" id="eventID" value="" readonly/>
-
-                                        </form>
-                                      </div>
-                                      <div class="modal-footer">
-                                      <input class="btn btn-warning" type="submit" form="" value="עריכת אירוע">
-                                      <input class="btn btn-danger" type="submit" form="delete_this_event" value="מחק אירוע">
-                                      <button type="button" class="btn btn-secondary" onclick="closemodal();">סגירה</button>
-                                      </div>
-                      </div>
-                   </div>
+                <div class="modal-header">
+                    <h4 class="modal-title">צפייה באירוע</h4>
                 </div>
 
+                <div class="modal-body">
+                    <form id="delete_this_event" method="POST"
+                          action="{{ url_for('events_blueprint.delete_event', eventForm=eventForm)}}">
 
-  </main>
+                        <label class="prettyLabel" for="eventID">האירוע מתחיל בשעה:</label>
+                        <input class="eventTimes" type="text" name="" style="width:100%" id="eventStartTime" value=""
+                               readonly/>
+
+                        <label class="prettyLabel" for="eventID">האירוע נגמר בשעה:</label>
+                        <input class="eventTimes" type="text" name="" style="width:100%" id="eventEndTime" value=""
+                               readonly/>
+
+                        <input type="hidden" name="eventID" id="eventID" value="" readonly/>
+
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <input class="btn btn-warning" type="submit" form="" value="עריכת אירוע">
+                    <input class="btn btn-danger" type="submit" form="delete_this_event" value="מחק אירוע">
+                    <button type="button" class="btn btn-secondary" onclick="closemodal();">סגירה</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</main>
 
 {% endblock content %}
 
@@ -182,27 +228,28 @@ function closemodal() {
 };
 
 
+
 </script>
 
-  <!-- jQuery -->
-  <script src="/static/assets/plugins/jquery/jquery.min.js"></script>
-  <!-- Bootstrap -->
-  <script src="/static/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- jQuery UI -->
-  <script src="/static/assets/plugins/jquery-ui/jquery-ui.min.js"></script>
-  <!-- AdminLTE App -->
-  <script src="/static/assets/js/adminlte.min.js"></script>
-  <!-- AdminLTE for demo purposes -->
-  <script src="/static/assets/js/demo.js"></script>
-  <!-- fullCalendar 2.2.5 -->
-  <script src="/static/assets/plugins/moment/moment.min.js"></script>
-  <script src="/static/assets/plugins/fullcalendar/main.min.js"></script>
-  <script src="/static/assets/plugins/fullcalendar-daygrid/main.min.js"></script>
-  <script src="/static/assets/plugins/fullcalendar-timegrid/main.min.js"></script>
-  <script src="/static/assets/plugins/fullcalendar-interaction/main.min.js"></script>
-  <script src="/static/assets/plugins/fullcalendar-bootstrap/main.min.js"></script>
-  <!-- Page specific script -->
-  <script>
+<!-- jQuery -->
+<script src="/static/assets/plugins/jquery/jquery.min.js"></script>
+<!-- Bootstrap -->
+<script src="/static/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- jQuery UI -->
+<script src="/static/assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+<!-- AdminLTE App -->
+<script src="/static/assets/js/adminlte.min.js"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="/static/assets/js/demo.js"></script>
+<!-- fullCalendar 2.2.5 -->
+<script src="/static/assets/plugins/moment/moment.min.js"></script>
+<script src="/static/assets/plugins/fullcalendar/main.min.js"></script>
+<script src="/static/assets/plugins/fullcalendar-daygrid/main.min.js"></script>
+<script src="/static/assets/plugins/fullcalendar-timegrid/main.min.js"></script>
+<script src="/static/assets/plugins/fullcalendar-interaction/main.min.js"></script>
+<script src="/static/assets/plugins/fullcalendar-bootstrap/main.min.js"></script>
+<!-- Page specific script -->
+<script>
   document.addEventListener("DOMContentLoaded", function(event){
   // your code here
 
@@ -355,6 +402,7 @@ function closemodal() {
       })
     })
 });
-  </script>
+
+</script>
 
 {% endblock javascripts %}
