change db tal not working

--- a/apps/templates/patients/patient_info.html
+++ b/apps/templates/patients/patient_info.html
@@ -318,7 +318,7 @@
                                                             </tr>
                                                             </thead>
                                                             <tbody>
-                                                            {% for time in contact.contacts_times %}
+                                                            {% for time in contact.contact_time %}
                                                                 <tr>
                                                                     <td class="align-middle text-center">
                                                                         <span class="text-secondary text-m font-weight-bold">{{ time.day }}</span>
